# FastAPI

./: Dockerfile.dagster  Dockerfile.evidently  Dockerfile.mlflow  Dockerfile.serving  README.md  config.yaml  crear_versiones.py  docker-compose.yml  launch_runs.py  main.py  mlflow.db  pyproject.toml
.dvc/: config
.tmp_dagster_home_2ju5wg_u/history/: runs.db  runs.db-wal
.tmp_dagster_home_2ju5wg_u/history/runs/: .db  a91e4a6d-256f-4375-b9c0-f06727876575.db  index.db
.tmp_dagster_home_2ju5wg_u/schedules/: schedules.db
.tmp_dagster_home_2ju5wg_u/storage/: best_model  hp_optimization_study  process_dataset  raw_dataset
.tmp_dagster_home_2ju5wg_u/storage/a91e4a6d-256f-4375-b9c0-f06727876575/compute_logs/: bktiwnoq.err  gmalcmdd.err  gmalcmdd.out  xopqgske.err  ykwjoplh.err  ykwjoplh.out  yyfocvkn.err
attrition_mlops/: definitions.py
attrition_mlops/assets/: data.py  ml.py
attrition_mlops/resources/: mlflow_resource.py
dagster_home/.telemetry/: id.yaml
dagster_home/history/: runs.db
dagster_home/history/runs/: .db  d727c158-f53a-415c-8492-b6772520688d.db  index.db
dagster_home/schedules/: schedules.db
dagster_home/storage/: best_model  hp_optimization_study
dagster_home/storage/d727c158-f53a-415c-8492-b6772520688d/compute_logs/: bnnxxokd.err  dhjpsvfs.err  jsolblux.err  jsolblux.out  leizjsnn.err  leizjsnn.out  owivrgfp.err  owivrgfp.out
data/: attrition.csv.dvc  attrition_v1.csv
fastapi_serving/: app.py  config.py  logger.py  predictor.py  schemas.py
monitoring/: approval_api.py  mailer.py  monitor.py  start.sh
scripts/: simulate_drift.py
(+8 files in other folders)
