[project]
name = "07-mlflow-dvc-dagster-integration-alexiia99"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.12.16",
    "dagster-webserver>=1.12.16",
    "dvc>=3.66.1",
    "mlflow>=3.10.0",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
]
